# ConsoleChess

./: Bishop.cpp  Bishop.h  CMakeLists.txt  Field.cpp  Field.h  Figure.h  FiguresFactory.cpp  FiguresFactory.h  GameLoop.cpp  GameLoop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Vector2D.cpp  Vector2D.h  main.cpp
